# AutoSpecMan

./: .gitignore  Makefile  README.md  autospecman.toml  autospecman.toml.example  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
autospecman/: __init__.py  ai_formatter.py  cli.py  config.py  inference.py  llm.py  repository.py  schema.py
autospecman/detectors/: __init__.py  error_handling.py  history.py  language.py  structure.py  tooling.py
config/: config.py  config.yaml  detector_config.yaml
detector/: api_design_detector.py  base_detector.py  codestyle_detector.py  structor_detector.py  structure_detector.py  versioncontrol_detector.py
docs/: base.md  code_style_detection_analysis.md  progress.md  project-spec-scope.md  spec_fmt.md
result/: api_design.md  code_style.md  structure.md  version_control.md
specs/: spec-AutoSpecMan.yaml
utils/: __init__.py  codeindex_utils.py  git_utils.py  logger.py
